@@ -8,6 +8,8 @@ Version 1.3.7
 - fixed to handle file references with Windows paths on Unix
 - fixed the "failed to convert to unicode" bug when saving (#1589744)
 - OS X: fixed clicking on PO files in Finder (#1583967)
+- fixed opening source files in external editor if the path contains
+  spaces (#1743172)
 - added more translations:
      Urdu (Muhammad Shakir Aziz)
 
